# tracarbon

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.txt  Makefile  README.adoc  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml  release.yml
docs/source/: api_reference.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
docs/source/_ext/: edit_on_github.py
documentation/: .buildinfo  api_reference.html  development.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
documentation/_sources/: api_reference.rst.txt  development.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
helm/tracarbon/: Chart.yaml  values.yaml
helm/tracarbon/templates/: _helpers.tpl  daemonset.yaml  rabc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
scripts/: check_data.py
stubs/: aiocache.pyi  datadog.pyi  psutil.pyi  pynvml.pyi
stubs/kubernetes/: __init__.pyi  client.pyi
tests/: conftest.py  test_builder.py  test_general_metrics.py  test_sensors.py
tests/carbon_emissions/: test_carbon_emissions.py
tests/cli/: test_cli.py
tests/exporters/: test_exporter.py  test_json_exporter.py  test_prometheus_exporter.py  test_promotheus_exporter.py
tests/hardwares/: test_amd_rapl.py  test_containers.py  test_energy.py  test_gpu.py  test_hardware.py  test_rapl.py  test_sensors.py
tests/hardwares/data/amd-energy/: energy1_label  energy2_label  energy3_input  energy3_label  name
tests/hardwares/data/intel-rapl/intel-raplT0/: energy_uj  name
tests/hardwares/data/intel-rapl/intel-raplT0/intel-raplT0T0/: energy_uj
tests/hardwares/data/intel-rapl/intel-raplT0/intel-raplT0T1/: energy_uj  max_energy_range_uj  name
tests/hardwares/data/intel-rapl/intel-raplT1/: name
tests/hardwares/data/intel-rapl/intel-raplT1/intel-raplT1T1/: max_energy_range_uj
tests/hardwares/data/intel-rapl2/intel-raplT0/: energy_uj
tests/locations/: test_FR.py  test_country.py  test_location.py
tracarbon/: __init__.py  __main__.py  builder.py  conf.py  exceptions.py  general_metrics.py  sensors.py
tracarbon/cli/: __init__.py
tracarbon/emissions/: __init__.py  carbon_emissions.py
tracarbon/exporters/: __init__.py  datadog_exporter.py  exporter.py  json_exporter.py  prometheus_exporter.py  promotheus_exporter.py  stdout.py
tracarbon/hardwares/: __init__.py  amd_rapl.py  cloud_providers.py  containers.py  energy.py  gpu.py  hardware.py  rapl.py  sensors.py
tracarbon/hardwares/data/: aws-instances.csv  azure-instances.csv  gcp-instances.csv
tracarbon/locations/: __init__.py  country.py  location.py
tracarbon/locations/data/: co2-emission-intensity-9.exhibit.json  eu-co2-emission-intensity.json  grid-emissions-factors-aws.csv  grid-emissions-factors-azure.csv
tracarbon/units/: __init__.py
