[project]
name = "tracarbon"
authors = [{"name" = "Florian Valeye", "email" = "<fvaleye@github.com>"}]
version = "0.7.5"
description = "Tracarbon is a Python library that tracks your device's energy consumption and calculates your carbon emissions."
readme = "README.md"
license = "Apache-2.0"
keywords = ["energy", "sustainability", "energy-consumption", "electricity-consumption", "energy-efficiency", "carbon-footprint", "carbon-emissions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only"
]
include = ["tracarbon/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = ">=0.6,<0.8"
aiohttp = "^3.9.3"
aiocache = "^0.12.1"
aiofiles = ">=23.2,<25.0"
psutil = ">=5.9.8"
ujson = "^5.9.0"
msgpack = "^1.0.4"
pydantic = ">=1.10.7,<3.0.0"
typer = ">=0.7,<0.16"
ec2-metadata = "^2.13.0"
python-dotenv = ">=0.21,<1.1"
asyncer = ">=0.0.5,<0.0.9"
datadog = {version = ">=0.44,<0.52", optional = true}
prometheus-client = {version = ">=0.16,<0.22", optional = true}
kubernetes = {version = ">=26.1,<32.0", optional = true}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10"
ruff = "^0.9.9"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-clarity = "^1.0.1"
sphinx = "^7.1.2"
pydata-sphinx-theme = "^0.14.4"
toml = "^0.10.2"
types-ujson = "^5.10.0"
datadog = ">=0.44,<0.52"
prometheus-client = ">=0.16,<0.22"
types-requests = "^2.31.0"
bandit = "^1.7.9"
radon = "^6.0.1"
types-aiofiles = "^24.1.0"
kubernetes = ">=26.1,<32.0"
autodoc_pydantic = "1.9.1"

[tool.poetry.extras]
datadog = ["datadog"]
prometheus = ["prometheus-client"]
kubernetes = ["kubernetes"]

[tool.poetry.scripts]
tracarbon = "tracarbon.cli:main"

[project.urls]
documentation = "https://fvaleye.github.io"
repository = "https://github.com/fvaleye/tracarbon"

[tool.mypy]
files = "tracarbon/"
exclude = "venv,^tests"
mypy_path = "./stubs"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
implicit_reexport = true
strict_equality = true
strict_optional = false

[tool.bandit]
skips = ["B404", "B607", "B602", "B603"]
exclude_dirs = ["tests", "scripts"]

[tool.ruff]
fix = true
select = ["I", "S", "B"]
line-length = 120
ignore = ["B023", "S603"]

[tool.ruff.per-file-ignores]  # Don’t apply ruff rules to our tests
"**/tests/*" = ["S"]

[tool.ruff.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = "--cov=tracarbon -v --asyncio-mode=auto"
markers = [
    "darwin",
    "windows",
    "linux"
]
testpaths = [
    "tests",
]
