[project]
name = "tracarbon"
authors = [{name = "Florian Valeye", email = "fvaleye@github.com"}]
version = "0.9.1"
description = "Tracarbon is a Python library that tracks your device's energy consumption and calculates your carbon emissions."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["energy", "sustainability", "energy-consumption", "electricity-consumption", "energy-efficiency", "carbon-footprint", "carbon-emissions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "loguru>=0.6,<0.8",
    "aiohttp>=3.9.3,<4.0.0",
    "aiocache>=0.12.1,<0.13.0",
    "aiofiles>=23.2,<26.0",
    "psutil>=5.9.8",
    "orjson>=3.10,<4",
    "msgpack>=1.1.1,<2.0.0",
    "pydantic>=1.10.7,<3.0.0",
    "typer>=0.7,<0.22",
    "ec2-metadata>=2.14.0,<3.0.0",
    "python-dotenv>=0.21,<1.3",
    "asyncer>=0.0.5,<0.0.13",
]

[project.optional-dependencies]
datadog = ["datadog>=0.44,<0.53"]
prometheus = ["prometheus-client>=0.16,<0.24"]
kubernetes = ["kubernetes>=26.1,<35.0"]
dev = [
    "ty>=0.0.1a6",
    "ruff>=0.11.13,<0.15.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-asyncio>=0.24.0,<1.3.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "pytest-xdist>=3.6.1,<4.0.0",
    "pytest-clarity>=1.0.1,<2.0.0",
    "sphinx>=7.4.7,<8.0.0",
    "pydata-sphinx-theme>=0.14.4,<0.17.0",
    "toml>=0.10.2,<0.11.0",
    "datadog>=0.44,<0.53",
    "prometheus-client>=0.16,<0.24",
    "bandit>=1.7.9,<2.0.0",
    "radon>=6.0.1,<7.0.0",
    "kubernetes>=26.1,<35.0",
    "autodoc_pydantic==2.2.0",
    "uv",
    "pre-commit>=3.7.0,<5.0.0"
]
all = [
    "tracarbon[datadog]",
    "tracarbon[prometheus]",
    "tracarbon[kubernetes]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tracarbon*"]

[project.scripts]
tracarbon = "tracarbon.cli:main"

[project.urls]
documentation = "https://fvaleye.github.io"
repository = "https://github.com/fvaleye/tracarbon"

[tool.ty.src]
include = ["tracarbon/"]

[tool.bandit]
skips = ["B404", "B607", "B602", "B603"]
exclude_dirs = ["tests", "scripts", ".venv"]

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
select = ["I", "S", "B"]
ignore = ["B023", "S603"]

[tool.ruff.lint.per-file-ignores]  # Don’t apply ruff rules to our tests
"**/tests/*" = ["S"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = "--cov=tracarbon -v --asyncio-mode=auto"
markers = [
    "darwin",
    "windows",
    "linux"
]
testpaths = [
    "tests",
]
